Use more idiomatic expressions